--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+quantum-monitor-442701-u0-7d326cf783b2.json
