--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@azure-rest/ai-content-safety": "^1.0.0",
+    "@google-cloud/language": "^6.5.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "mongoose": "^8.8.2",
     "reflect-metadata": "^0.2.0",
