--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@azure-rest/ai-content-safety": "^1.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.11",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^6.2.1",
     "dotenv": "^16.4.5",
+    "express-rate-limit": "^7.4.1",
     "mongoose": "^8.8.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
