--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "lucide-react": "^0.462.0",
     "mongoose": "^8.8.2",
     "node-cron": "^3.0.3",
     "passport": "^0.7.0",
