--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@azure-rest/ai-content-safety": "^1.0.0",
     "@google-cloud/language": "^6.5.0",
     "@nestjs/axios": "^3.1.2",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.12",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -34,6 +34,7 @@
     "@nestjs/throttler": "^6.2.1",
     "axios": "^1.7.8",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.462.0",
