--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "@auth0/auth0-react": "^2.2.4",
     "@azure-rest/ai-content-safety": "^1.0.0",
     "@google-cloud/language": "^6.5.0",
+    "@nestjs/apollo": "^12.2.1",
     "@nestjs/axios": "^3.1.2",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.4.12",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.13",
     "@nestjs/throttler": "^6.2.1",
     "axios": "^1.7.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
